# comuniveci_auth_service

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
src/: config.py  main.py  utils.py
src/domain/: entities.py  repositories.py  schemas.py
src/infrastructure/: metrics.py
src/infrastructure/api/: auth_views.py  dependencies.py  routes.py
src/infrastructure/persistence/: db.py  get_repository.py  mongo_repository.py
src/usecases/: get_all_users.py  login_user.py  register_user.py
